<resources>
    <string name="app_name">Qibla Direction</string>
    <string name="compass">Compass</string>
    <string name="location">Location</string>
    <string name="settings">Settings</string>
    <string name="templates">Templates</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="premium">Premium</string>
    <string name="compass_dial" translatable="false">Compass Dial</string>
    <string name="compass_hands" translatable="false">Compass Hands</string>
    <string name="sotw_north">N</string>
    <string name="sotw_east">E</string>
    <string name="sotw_south">S</string>
    <string name="sotw_west">W</string>
    <string name="sotw_northeast">NE</string>
    <string name="sotw_northwest">NW</string>
    <string name="sotw_southeast">SE</string>
    <string name="sotw_southwest">SW</string>
    <string name="this_action_may_contain_ads">This action may contain ads</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="qibla_compass">Qibla Compass</string>
    <string name="qibla_compass_is_an_accurate_compass_app_for_android_devices_use_the_most_up_to_date_and_advanced_app_for_your_day_to_day_routine">Qibla Compass is an accurate compass app for android devices. Use the most up-to-date and advanced app for your day to day routine.</string>
    <string name="compass_is_an_accurate_compass_app_for_android_devices_use_the_most_up_to_date_and_advanced_app_for_your_day_to_day_routine">Compass is an accurate compass app for android devices. Use the most up-to-date and advanced app for your day to day routine.</string>
    <string name="please_select_a_language">Please select a language</string>
    <string name="ad_loading">ad_loading</string>
    <string name="ad_is_loading">ad_is_loading</string>
    <string name="compass_design">Compass Design</string>
    <string name="qibla_direction">Qibla Angle : </string>
    <string name="map_location">Map Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="setting">Setting</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="language">Language</string>
    <string name="how_to_use">How To Use</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_app">Rate App</string>
    <string name="more_app">More App</string>
    <string name="terms_and_conditions">Terms And Conditions </string>
    <string name="get_premium">Get Premium</string>
    <string name="allow_qibla_compass_to_access_device_location_you_can_change_permissions_at_any_time">Allow Qibla Compass to access device location. You can change permissions at any time.</string>
    <string name="allow">Allow</string>
    <string name="don_t_allow">Don\'t Allow</string>
    <string name="qibla">Qibla</string>
    <string name="lifetime_purchase">Lifetime Purchase</string>
    <string name="lifetime">Lifetime</string>
    <string name="will_be_deducted_at_once_and_you_can_enjoy_and_free_version_of_app">will be deducted at once and you can enjoy the ad free version of app.</string>
    <!--update main nikalna ha "the ad"-->
    <string name="unable_to_retrieve_location_please_make_sure_location_services_are_enabled">Unable to retrieve location. Please make sure location services are enabled.</string>
    <string name="location_not_found">Location not found</string>
    <string name="location_permission_denied_cannot_retrieve_location">Location permission denied. Cannot retrieve location.</string>
    <string name="location_permission_denied_cannot_proceed">Location permission denied. Cannot proceed.</string>
    <string name="calibrate_your_device_by_moving_it_in_3_directions_as_shown_in_the_given_illustrations_or_moving_your_phone_in_8_pattern_shape">Calibrate your device by moving it in 3 directions as shown in the given illustrations or moving your phone in 8 pattern shape.</string>
    <string name="keep_your_device_away_from_magnetic_things_if_sensor_accuracy_is_still_low_you_did_the_calibration_wrong_or_may_be_there_is_a_problem_with_your_device">Keep your device away from magnetic things, if sensor accuracy is still low, you did the Calibration wrong or may be there is a problem with your device.</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="do_you_want_to_exit">Do you want to Exit?</string>
    <string name="gps_coordinates">GPS Coordinates</string>
    <string name="compass_sensor_is_not_available_in_your_device_nplease_contact_your_device_support_center">Compass Sensor is not available in your device.\nPlease contact your device support center.</string>
    <string name="ok">OK</string>
    <string name="alert">Alert!</string>
</resources>