<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.Activities.InAppActivity"
        >

        <LinearLayout
            android:id="@+id/imageView15"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="150dp"
            android:background="@drawable/in_app_banner"
            android:orientation="horizontal"
            android:src="@drawable/in_app_banner"
            app:layout_constraintBottom_toBottomOf="@+id/imageView14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:foreground="@drawable/ripple_effect"
            android:src="@drawable/close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/your_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/qibla"
            android:textSize="50sp"
            android:fontFamily="@font/alike_angular"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/alike_angular"
            android:text="@string/compass"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/your_text_view" />

        <LinearLayout
            android:id="@+id/imageView14"
            style="@style/in_app_bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextColorApp"
                android:text="@string/lifetime_purchase"
                android:textSize="22sp"
                android:textStyle="bold"
                />
            <LinearLayout
                android:id="@+id/lifeTimePurchase"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                style="@style/InAppBanner"
                android:foreground="@drawable/ripple_effect"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/lifetime"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_weight="3"
                    android:layout_marginStart="20dp"
                    />
                <TextView
                    android:id="@+id/priceLifetimePrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_margin="20dp"
                    android:text=""
                    android:textSize="22sp"
                    android:layout_weight="0"
                    android:textStyle="bold"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center|top"

                >

                <TextView
                    android:id="@+id/price2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    style="@style/TextColor"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    style="@style/TextColor"
                    android:text="@string/will_be_deducted_at_once_and_you_can_enjoy_and_free_version_of_app"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/terms_and_conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_and_conditions"
                    android:foreground="@drawable/ripple_effect"
                    style="@style/TextColorApp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" &amp; "
                    style="@style/TextColorApp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foreground="@drawable/ripple_effect"
                    android:text="@string/privacy_policy"
                    style="@style/TextColorApp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
