<!-- res/layout/dialog_exit.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            style="@style/ExitBackground"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/alert"
                    style="@style/ImageColorApp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert"
                    android:textSize="20sp"
                    style="@style/TextColor"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/dialog_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/compass_sensor_is_not_available_in_your_device_nplease_contact_your_device_support_center"
                style="@style/TextColor"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:textColor="#3D5663"
                android:layout_marginBottom="24dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="30dp"
                android:gravity="end">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:foreground="@drawable/ripple_effect"
                    android:textColor="@color/white"
                    style="@style/rounded_image_background_blue"
                    android:text="@string/ok"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
