<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.Activities.SliderActivity">


        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/nativeAdContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <LinearLayout
                android:id="@+id/allow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView
                    android:id="@+id/done"
                    style="@style/rounded_image_background_blue"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="4dp"
                    android:foreground="@drawable/ripple_effect"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/allow"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/dont_allow"
                    style="@style/TextColorApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/don_t_allow"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/done"
                    android:layout_marginBottom="20dp"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/bottom_slider"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center|end">
                    <ImageView
                        android:id="@+id/s1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/slider_bottom" />

                    <ImageView
                        android:id="@+id/s2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/slider_bottom" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:paddingTop="3dp"
                    android:paddingEnd="10dp">

                    <TextView
                        android:id="@+id/navigationTextView"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        style="@style/rounded_image_background_blue"
                        android:foreground="@drawable/ripple_effect"
                        android:gravity="center"

                        android:padding="10dp"
                        android:text="@string/next"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="2dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            android:gravity="center"
            android:backgroundTint="@color/appColor"
            android:orientation="horizontal">

        </LinearLayout>
            <FrameLayout
                android:id="@+id/nativeAdContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                style="@style/CardBackground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/ad_loading"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />
            </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
